modified front.dockerfile added new nodetag and updated yml

--- a/frontend.yaml
+++ b/frontend.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name:  frontend
-        image:  atzsamuel/frontend:0.1.0
+        image:  atzsamuel/frontend:0.1.0-gcp
         resources:
           requests:
             cpu: 100m
